tests/baselines/reference/privateNamesInNestedClasses.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesInNestedClasses.ts(13,18): error TS2339: Property '#foo' does not exist on type 'A'.
tests/cases/conformance/classes/members/privateNames/privateNamesInNestedClasses.ts(13,18): error TS18013: This usage of '#foo' refers to the private member declared in its enclosing class. While type 'B' has a private member with the same spelling, its declaration and accessibility are distinct.


==== tests/cases/conformance/classes/members/privateNames/privateNamesInNestedClasses.ts (2 errors) ====
    // @target es6
    
    class A {
       #foo = "A's #foo";
       #bar = "A's #bar";
       method () {
           class B {
               #foo = "B's #foo";
               bar (a: any) {
                   a.#foo; // OK, no compile-time error, don't know what `a` is
               }
               baz (a: A) {
                   a.#foo; // compile-time error, shadowed
                     ~~~~
!!! error TS2339: Property '#foo' does not exist on type 'A'.
                     ~~~~
!!! error TS18013: This usage of '#foo' refers to the private member declared in its enclosing class. While type 'B' has a private member with the same spelling, its declaration and accessibility are distinct.
               }
               quux (b: B) {
                   b.#foo; // OK
               }
           }
           const a = new A();
           new B().bar(a);
           new B().baz(a);
           const b = new B();
           new B().quux(b);
       }
    }
    
    new A().method();